Fix text overflow for Climate Policies/Overview & fix footer position

--- a/app/javascript/app/layouts/root/root-styles.scss
+++ b/app/javascript/app/layouts/root/root-styles.scss
@@ -10,4 +10,5 @@
 
 .appContent {
   padding-top: $header-height;
+  min-height: calc(100vh - 42px);
 }
